--- a/vault/index.html
+++ b/vault/index.html
@@ -2,3 +2,33 @@
 layout: default
 title: Vault
 ---
+<section class="vault">
+	
+	<div class="row">
+		<div class="cat-block">
+			<h2>
+				Design
+			</h2>
+			<ul class="posts">
+			    {% for post in site.categories:design %}
+			      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+			    {% endfor %}
+			 </ul>
+		</div>
+
+		<div class="cat-block">
+			<h2>
+				Emacs
+			</h2>
+			<ul class="posts">
+			    {% for post in site.categories:emacs %}
+			      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+			    {% endfor %}
+			</ul>
+		</div>
+	</div>
+
+
+
+
+</section>
