--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@ title: Home
 <div id="home">
   <ul class="posts">
     {% for post in site.posts %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+      	<a href="{{ post.url }}">
+      		{{ post.title }}
+      	</a>
+      </li>
     {% endfor %}
   </ul>
 </div>
